Finish Turbo flash messages

--- a/app/views/quotes/create.turbo_stream.erb
+++ b/app/views/quotes/create.turbo_stream.erb
@@ -2,4 +2,4 @@
 
 <%= turbo_stream.prepend "quotes", @quote %>
 <%= turbo_stream.update Quote.new, "" %>
-<%= render_turbo_stream_flash_messages %>
+<%= turbo_stream.prepend "flash", partial: "layouts/flash" %>
