--- a/app/views/quotes/destroy.turbo_stream.erb
+++ b/app/views/quotes/destroy.turbo_stream.erb
@@ -1,4 +1,4 @@
 <%# app/views/quotes/destroy.turbo_stream.erb %>
 
 <%= turbo_stream.remove @quote %>
-<%= render_turbo_stream_flash_messages %>
+<%= turbo_stream.prepend "flash", partial: "layouts/flash" %>
